--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.206", features = ["derive"] }
+serde_json = "1.0.122"
